<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Food Diary</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Date Picker</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="nav_menu_array">
        <item>Food Diary</item>
        <item>Food Library</item>
        <item>Food Search</item>
        <item>Report</item>
        <item>Settings</item>
    </string-array>

    <string-array name="diary_context">
        <item>Update</item>
        <item>Delete</item>
    </string-array>

    <!-- Food Search -->
    <string name="food_search">Enter food name here…</string>

    <!-- Add Diary Entry -->
    <string name="add_diary_enter_food_id_hint">Enter food ID here…</string>


    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="backup_data">Backup data</string>
    <string name="import_data">Import data</string>
    <string name="backup_before_import">Do you want to backup the current database before importing the old database?</string>
    <string name="select_file">Select file</string>
    <string name="backup_empty">Backup file is empty</string>

    <!-- -->
    <string name="title_note">Title note</string>
    <string name="content">Content</string>
    <string name="title_activity_note">Create Note</string>
    <string name="button_scan_item_text">Scan</string>
    <string name="tvAddFoodName_text">Food Name:</string>
    <string name="tvAddTime_text">Time:</string>
    <string name="tvAddNote_text">Note:</string>
    <string name="buttonAddEntry_text">Add Entry</string>
    <string name="button_scan_food_text">Scan</string>
    <string name="tvAddFoodName_food_lib_text">Food Name:</string>
    <string name="tvAddNote_food_lib_text">Note:</string>
    <string name="buttonAddFoodLib_text">Add Entry</string>
    <string name="tvAddFoodName_edit_diary_text">Food Name:</string>
    <string name="tvAddTime_edit_diary_text">Time:</string>
    <string name="tvAddNote_edit_diary_text">Note:</string>
    <string name="buttonUpdateEntry_text">Update Entry</string>
    <string name="textView_edit_food_lib_text">Food ID:</string>
    <string name="tvAddFoodName_edit_food_lib_text">Food Name:</string>
    <string name="tvAddNote_edit_food_lib_text">Note:</string>
    <string name="buttonUpdateFoodLib_text">Update Entry</string>
    <string name="tvEmailAdd_text">Email Address:</string>
    <string name="tvSubject_text">Subject:</string>
    <string name="tvMessage_text">Message:</string>
    <string name="tvAttatchment_text">Attachment:</string>
    <string name="tvfoodpdf_text">food_diary.pdf</string>
    <string name="buttonSendReportEmail_text">Send</string>
    <string name="tvFName_text">Food Name:</string>
    <string name="tvFoodName_text">Food Name</string>
    <string name="tvFNum_text">Food Number:</string>
    <string name="tvFoodNo_text">Food Number</string>
    <string name="tvWei_text">Weight:</string>
    <string name="tvWeight_text">Weight</string>
    <string name="tvMea_text">Measure:</string>
    <string name="tvMeasure_text">Measure</string>
    <string name="tvReport_text">Select the start and end date for the report.</string>
    <string name="tvStartDate_text">Start Date:</string>
    <string name="tvEndDate_text">End Date:</string>
    <string name="buttonGenerateReport_text">Generate Report</string>
    <string name="textView_set_notif">Set Notifcation</string>
    <string name="tvAddTime_settings_text">Time:</string>
    <string name="editTime_select_time">Select time...</string>
    <string name="buttonNoteSet_text">Set</string>
    <string name="textView2_settings_text">Backup Database</string>
    <string name="buttonExportSD_text">Export Database</string>
    <string name="buttonImportSD_text">Import Database</string>
</resources>