<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_set_notif"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp" />


        <TextView
            android:id="@+id/tvAddTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvAddTime_settings_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/textView"
            android:layout_alignStart="@+id/editTime" />

        <EditText
            android:id="@+id/editTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:inputType="time"
            android:singleLine="true"
            android:hint="@string/editTime_select_time"
            android:layout_marginRight="5dp"
            android:layout_below="@+id/tvAddTime"
            android:layout_alignEnd="@+id/textView" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonNoteSet_text"
            android:id="@+id/buttonNoteSet"
            android:layout_alignTop="@+id/editTime"
            android:layout_alignParentEnd="true" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTime"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/textView2_settings_text"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonExportSD_text"
                android:id="@+id/buttonExportSD" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonImportSD_text"
                android:id="@+id/buttonImportSD"
                android:layout_marginTop="20dp" />
        </LinearLayout>
    </RelativeLayout>